--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-charts-react": "^11.3.0",
+    "chance": "^1.1.13",
     "d3-fetch": "^3.0.1",
     "d3-geo": "^3.1.1",
     "datamaps": "^0.5.9",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^4.25.0",
@@ -25,6 +27,7 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-virtuoso": "^4.12.7",
     "sass": "^1.89.0",
     "topojson-client": "^3.1.0",
     "web-vitals": "^2.1.4"
