--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "d3-geo": "^3.1.1",
     "datamaps": "^0.5.9",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^4.25.0",
@@ -31,7 +32,8 @@
     "react-virtuoso": "^4.12.7",
     "sass": "^1.89.0",
     "topojson-client": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
